--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ClothChecker</string>
+    <string name="please_try_again">Try again</string>
 </resources>
